tests/dataset/tpc-ds/compiler/c/q10.error
/tmp/q10.c:258:3: error: unknown type name ‘customer_address_t’
  258 |   customer_address_t *data;
      |   ^~~~~~~~~~~~~~~~~~
/tmp/q10.c: In function ‘create_customer_address_list’:
/tmp/q10.c:263:31: error: ‘customer_address_t’ undeclared (first use in this function); did you mean ‘customer_addres_t’?
  263 |   l.data = calloc(len, sizeof(customer_address_t));
      |                               ^~~~~~~~~~~~~~~~~~
      |                               customer_addres_t
/tmp/q10.c:263:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/q10.c: At top level:
/tmp/q10.c:284:3: error: unknown type name ‘customer_demographics_t’
  284 |   customer_demographics_t *data;
      |   ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/q10.c: In function ‘create_customer_demographics_list’:
/tmp/q10.c:289:31: error: ‘customer_demographics_t’ undeclared (first use in this function); did you mean ‘customer_demographic_t’?
  289 |   l.data = calloc(len, sizeof(customer_demographics_t));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
      |                               customer_demographic_t
/tmp/q10.c: In function ‘test_TPCDS_Q10_demographics_count’:
/tmp/q10.c:354:59: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  354 |   if (test_TPCDS_Q10_demographics_count_result.len != tmp1.len) {
      |                                                           ^
      |                                                           ->
/tmp/q10.c:358:68: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  358 |       if (test_TPCDS_Q10_demographics_count_result.data[i3] != tmp1.data[i3]) {
      |                                                                    ^
      |                                                                    ->
/tmp/q10.c: In function ‘main’:
/tmp/q10.c:399:7: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  399 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q10.c:399:43: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  399 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |                                           ^
      |                                           ->
/tmp/q10.c:399:58: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  399 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |                                                          ^
      |                                                          ->
/tmp/q10.c:408:34: error: ‘c’ undeclared (first use in this function)
  408 |       if (!(ss.ss_customer_sk == c.c_customer_sk && d.d_year == 2000 &&
      |                                  ^
/tmp/q10.c:417:38: warning: implicit declaration of function ‘customer_demographic_list_t_create’ [-Wimplicit-function-declaration]
  417 |   customer_demographic_list_t tmp8 = customer_demographic_list_t_create(
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q10.c:418:15: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  418 |       customer.len * customer_address.len * customer_demographics.len);
      |               ^
      |               ->
/tmp/q10.c:418:38: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  418 |       customer.len * customer_address.len * customer_demographics.len);
      |                                      ^
      |                                      ->
/tmp/q10.c:418:66: error: ‘(customer_demographic_t *)&customer_demographics’ is a pointer; did you mean to use ‘->’?
  418 |       customer.len * customer_address.len * customer_demographics.len);
      |                                                                  ^
      |                                                                  ->
/tmp/q10.c:508:46: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  508 |   test_TPCDS_Q10_demographics_count_result = result;
      |                                              ^~~~~~
